--- a/assets/style.css
+++ b/assets/style.css
@@ -183,3 +183,21 @@ textarea:focus, input:focus{
     object-fit: cover;
     position: relative;
 } */
+
+
+/* overlay */
+#overlay1{
+    display: none;
+  color: black;
+  width: 100%;
+  height: 100%;
+  background-color:rgba(255, 255, 255, 0.456);
+  position:absolute;
+  top: 20px;
+  left: 35px;
+  font-weight: bold;
+  text-align: center;
+  font-size: 30px;
+  padding-top: 50%;
+  font-family: 'Delius Swash Caps', cursive;
+}
