--- a/assets/style.css
+++ b/assets/style.css
@@ -185,7 +185,18 @@ textarea:focus, input:focus{
 } */
 
 /* portfolio */
-#lay1, #lay2, #lay3, #lay4, #lay5, #lay6, #lay7, #lay8{
+
+#work{
+    display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  
+}
+.col-md-3 img{
+    max-width: 100%;
+    max-height: 100%;
+  }
+#lay1,#lay2,#lay3,#lay4,#lay5,#lay6,#lay7,#lay8{
     display: none;
   color: black;
   width: 100%;
@@ -198,8 +209,26 @@ textarea:focus, input:focus{
   text-align: center;
   font-size: 30px;
   padding-top: 50%;
-  font-family: 'Delius Swash Caps', cursive;
+  /* font-family: 'Delius Swash Caps', cursive; */
 }
+
+.Hover {
+    opacity:0;
+    background-color: rgba(255, 255, 255, 0.623);
+    position: absolute;
+    top:25%;
+    bottom:25%;
+    left:25%;
+    right:25%; 
+  }
+  .custom-info-on-portfolio-images {
+    height: 280px;
+    max-width: 280px;
+    padding:2px;
+  }
+  .row{
+    padding:2%;
+  }
 
 
 /* mailchimp form styled */
