--- a/assets/style.css
+++ b/assets/style.css
@@ -212,3 +212,17 @@ textarea:focus, input:focus{
 .email:focus{background: transparent; border: 2px solid white;}
 .text:focus{background: transparent;}
 /* .clear .button{background: green;} */
+
+
+.zoom {
+    /* padding: 50px; */
+    /* background-color: green; */
+    transition: transform .2s; /* Animation */
+    /* width: 200px; */
+    /* height: 200px; */
+    margin: 0 auto;
+  }
+  
+  .zoom:hover {
+    transform: scale(1.5); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  }
