--- a/assets/style.css
+++ b/assets/style.css
@@ -185,21 +185,23 @@ textarea:focus, input:focus{
 } */
 
 /* portfolio */
+#one,#two,#three,#four,#five,#six,#seven,#eight{
+    position: relative;
+}
 
 #lay1,#lay2,#lay3,#lay4,#lay5,#lay6,#lay7,#lay8{
-    display: none;
-  color: black;
-  width: 100%;
-  height: 100%;
-  background-color:rgba(255, 255, 255, 0.456);
-  position:absolute;
-  top: 20px;
-  left: 35px;
-  font-weight: bold;
-  text-align: center;
-  font-size: 30px;
-  padding-top: 50%;
-  /* font-family: 'Delius Swash Caps', cursive; */
+    position: absolute;
+    z-index: 999;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    top: 30%; /* Adjust this value to move the positioned div up and down */
+    text-align: center;
+    width: 60%; 
+    font-size: 40px;
+    color: white;
+    background-color: grey;
+    opacity: 1;
 }
 
 /* mailchimp form styled */
