--- a/assets/style.css
+++ b/assets/style.css
@@ -191,17 +191,17 @@ textarea:focus, input:focus{
 
 #lay1,#lay2,#lay3,#lay4,#lay5,#lay6,#lay7,#lay8{
     position: absolute;
-    z-index: 999;
+    z-index: 10;
     margin: 0 auto;
     left: 0;
     right: 0;
     top: 30%; /* Adjust this value to move the positioned div up and down */
     text-align: center;
-    width: 60%; 
+    width: 72%; 
     font-size: 40px;
     color: white;
-    background-color: grey;
-    opacity: 1;
+    background-color: rgba(0,0,0,0.5);
+    /* opacity: 50; */
 }
 
 /* mailchimp form styled */
