added some more styles to my css file

--- a/assets/style.css
+++ b/assets/style.css
@@ -193,6 +193,9 @@ textarea:focus, input:focus{
     color: white;
     background-color: rgba(0,0,0,0.5);
     font-family: 'Reggae One', cursive;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 
